Prevent scrollbars when touches reach the sides of the body

--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ html, body {
 
 body {
     background: #332f35;
+    overflow: hidden;
     -moz-user-select: none;
     -webkit-user-select: none;
     -ms-user-select: none;
